syntax = "proto3";

package server_grpc;

option go_package = "internal/server/grpc/proto";

message Metric {
    string type = 1;
    string name = 2;
    int64 delta = 3;
    double value = 4;
}

message GetMetricRequest {
    string type = 1;
    string name = 2;
}

message GetMetricResponse {
    Metric metric = 1;
    string error = 2;
}

message GetMetricsAllRequest {
}

message GetMetricsAllResponse {
    repeated Metric metrics = 1;
}

message UpdateMetricRequest {
    Metric metric = 1;
}

message UpdateMetricResponse {
    string error = 1;
}


service Metrics {
    rpc ReadMetric(GetMetricRequest) returns (GetMetricResponse);
    rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
    rpc ReadMericAll(GetMetricsAllRequest) returns (GetMetricsAllResponse);
}